<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_deskew_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2398772523@qq.com">lu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>livox_ros_driver2</depend>
  <!-- 引入数学和并行库 -->
  <depend>libeigen</depend>
  <depend>tbb</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
