<?xml version="1.0"?>
<package format="3">
  <name>smooth_cmd_node</name>
  <version>0.1.0</version>
  <description>Velocity smoothing node from /cmd_vel_chassis to /cmd_vel</description>
  <maintainer email="2398772523@qq.com">lu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

